Rapair parquet filter and Ohsome filter for countries

--- a/notebooks-blds/blds-download-export-data-ver2-sel-countries.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2-sel-countries.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# initializing variables\n",
-    "desired_countries = [\"USA\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]"
+    "desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "\n",
     "while True:\n",
     "    try:\n",
-    "        user_sel_countries = input(\"Do you want to download data for specific countries?\\\n",
+    "        user_sel_countries = input(\"Do you want to download data for desired countries defined in a list in the code?\\\n",
     "                                        Enter y for yes or n for no\"\n",
     "                                )\n",
     "    except ValueError as e:\n",
@@ -463,22 +463,26 @@
     "    return feature\n",
     "\n",
     "\n",
-    "def sel_countries_from_geojson(bpolys):\n",
+    "def sel_countries_from_geojson(bpolys, desired_countires):\n",
     "    \"\"\"Get the celected countries from the geojson file.\"\"\"\n",
     "\n",
     "    sel_countries = {\"features\": []}\n",
     "\n",
-    "    desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]\n",
-    "\n",
-    "    for i in range(len(bpolys[\"features\"])):\n",
-    "        if bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"] in desired_countries:\n",
-    "            sel_country = bpolys[\"features\"][i]\n",
-    "            sel_countries[\"features\"].append(sel_country)\n",
-    "            print(i, bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
-    "            desired_countries.remove(\n",
-    "                bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
-    "\n",
-    "    print(f\"Countries not included: {desired_countries}\")\n",
+    "    # desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]\n",
+    "    while True:\n",
+    "        try:\n",
+    "            for i in range(len(bpolys[\"features\"])):\n",
+    "                if bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"] in desired_countries:\n",
+    "                    sel_country = bpolys[\"features\"][i]\n",
+    "                    sel_countries[\"features\"].append(sel_country)\n",
+    "                    print(i, bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
+    "                    desired_countries.remove(bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
+    "        except KeyError:\n",
+    "            print(\"You are trying to access a key that does not exist. Please try to use a geojson format in different structure.\")   \n",
+    "            break\n",
+    "        break\n",
+    "        \n",
+    "    print(f\"Countries not in downloaded data: {desired_countries}\")\n",
     "\n",
     "    return sel_countries\n",
     "\n",
@@ -592,21 +596,28 @@
       "53 VNM\n",
       "95 NGA\n",
       "148 US1\n",
-      "Countries not included: []\n"
+      "Countries not in downloaded data: []\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
+      "100%|██████████| 5/5 [08:27<00:00, 101.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished!\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [05:56<00:00, 71.21s/it] \n"
+      "\n"
      ]
     }
    ],
@@ -614,35 +625,48 @@
     "json_data = []\n",
     "geojson_data = []\n",
     "\n",
-    "if user_d_format == 0:\n",
-    "    if user_sel_countries == \"y\":\n",
-    "        sel_countries = sel_countries_from_geojson(bpolys)\n",
+    "fin_file_name = input(\"Enter the name of the file to export the data: \")\n",
+    "\n",
+    "if user_d_format == 0: # 0 for json format\n",
+    "    if user_sel_countries == \"y\": # y just for selected countries\n",
+    "        sel_countries = sel_countries_from_geojson(bpolys, desired_countries)\n",
     "        obtained_json_data = return_json_data(sel_countries)\n",
     "        json_data.extend(obtained_json_data)\n",
-    "        export_data_as_json(geojson_dic[user_d_spec], obtained_json_data)\n",
+    "        export_data_as_json(fin_file_name, obtained_json_data)\n",
     "    else:\n",
     "        obtained_json_data = return_json_data()\n",
     "        json_data.extend(obtained_json_data)\n",
-    "        export_data_as_json(geojson_dic[user_d_spec], obtained_json_data)\n",
+    "        export_data_as_json(fin_file_name, obtained_json_data)\n",
     "else:\n",
-    "    obtained_geojson_data = return_geojson_data()\n",
-    "    geojson_data.extend(obtained_geojson_data)\n",
-    "    export_data_as_geojson(geojson_dic[user_d_spec], obtained_geojson_data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f\"downloaded-data-json\\\\blds_{geojson_dic[user_d_spec]}.json\", \"r\") as file:\n",
-    "    dow_res = json.load(file)"
+    "    if user_sel_countries == \"y\": # y just for selected countries\n",
+    "        sel_countries = sel_countries_from_geojson(bpolys, desired_countries)\n",
+    "        obtained_geojson_data = return_geojson_data(sel_countries)\n",
+    "        geojson_data.extend(obtained_geojson_data)\n",
+    "        export_data_as_geojson(fin_file_name, obtained_geojson_data)\n",
+    "    else:    \n",
+    "        obtained_geojson_data = return_geojson_data()\n",
+    "        geojson_data.extend(obtained_geojson_data)\n",
+    "        export_data_as_geojson(fin_file_name, obtained_geojson_data)\n",
+    "print(\"Finished!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if user_d_format == 0:  # 0 for json format\n",
+    "    with open(f\"downloaded-data-json\\\\blds_{fin_file_name}.json\", \"r\") as file:\n",
+    "        dow_res = json.load(file)\n",
+    "else:\n",
+    "    print(\"Stopping the script.\")\n",
+    "    raise SystemExit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +839,7 @@
        "[90 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
