--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -94,7 +94,7 @@
     "parquet_dir = os.path.join(home_dir, r\"oshdb-contributions-parquet-data-test\")\n",
     "parquet_dir\n",
     "\n",
-    "# parquet_dir = r\"E:\\Rafael-data\\type=way\\state=latest\"\n"
+    "parquet_dir = r\"E:\\Rafael-data\\type=way\\state=latest\"\n"
    ]
   },
   {
@@ -1005,7 +1005,7 @@
     "# Selected countries\n",
     "df_ai_blds_created_country = df_ai_blds_created.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
     "df_ai_blds_created_country = df_ai_blds_created_country.groupBy(\"year\", \"country\").count().withColumnRenamed(\"count\", \"df_ai_blds_created_country\").toPandas()\n",
-    "df_all_blds_created_country"
+    "df_ai_blds_created_country"
    ]
   },
   {
@@ -1672,7 +1672,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_created = df_roads_created.groupBy(\"osm_id\", \"editor\", \"length\", \"country\", \"tags_str\", \"hashtags\", \"year\", \"road\").agg(psf.last(\"datetime\").alias(\"datetime\"))\n"
+    "df_all_roads_created = df_roads_created.groupBy(\n",
+    "    \"osm_id\", \"editor\", \"length\", \"country\", \"tags_str\", \"hashtags\", \"year\", \"road\").agg(psf.last(\"datetime\").alias(\"datetime\"))\n"
    ]
   },
   {
@@ -1712,6 +1713,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_roads_created = df_roads_created.filter(\n",
+    "    df_roads_created.tags_str.contains(\"highway\"))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1732,19 +1743,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_main_roads_created = df_roads_created.filter(\n",
-    "    df_roads_created.tags_str.contains(\"motorway\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"trunk\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"motorway_link\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"trunk_link\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"primary\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"primary_link\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"secondary\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"secondary_link\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"tertiary\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"tertiary_link\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"unclassified\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"residential\")\\\n",
+    "df_main_roads_created = df_all_roads_created.filter(\n",
+    "    df_all_roads_created.tags_str.contains(\"motorway\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"trunk\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"motorway_link\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"trunk_link\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"primary\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"primary_link\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"secondary\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"secondary_link\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"tertiary\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"tertiary_link\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"unclassified\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"residential\")\\\n",
     "    )\n"
    ]
   },
@@ -1822,7 +1833,7 @@
    ],
    "source": [
     "# World – all roads\n",
-    "df_all_roads_created_world = df_roads_created.groupBy(\"year\").sum().toPandas()\n",
+    "df_all_roads_created_world = df_all_roads_created.groupBy(\"year\").sum().toPandas()\n",
     "df_all_roads_created_world\n"
    ]
   },
@@ -1966,7 +1977,7 @@
    ],
    "source": [
     "# Selected countries – all roads\n",
-    "df_all_roads_created_country = df_roads_created.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
+    "df_all_roads_created_country = df_all_roads_created.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
     "df_all_roads_created_country = df_all_roads_created_country.groupBy(\"year\", \"country\").sum().toPandas()\n",
     "df_all_roads_created_country"
    ]
@@ -2272,10 +2283,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f1_created = df_roads_created.filter(\\\n",
-    "#     df_roads_created.tags_str.contains(\"mapwithai\")\\\n",
-    "#     | df_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
-    "#     | df_roads_created.tags_str.contains(\"nsroadimport\")\\\n",
+    "# df_roads_f1_created = df_all_roads_created.filter(\\\n",
+    "#     df_all_roads_created.tags_str.contains(\"mapwithai\")\\\n",
+    "#     | df_all_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
+    "#     | df_all_roads_created.tags_str.contains(\"nsroadimport\")\\\n",
     "#     )\n"
    ]
   },
@@ -2305,16 +2316,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f2_created = df_roads_created.filter(\\\n",
+    "# df_roads_f2_created = df_all_roads_created.filter(\\\n",
     "#     (\n",
-    "#         (df_roads_created.tags_str.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
-    "#         | df_roads_created.tags_str.contains(\"nsroadimport\"))\\\n",
-    "#         & (df_roads_created.tags_str.contains(\"highway\")))\\\n",
+    "#         (df_all_roads_created.tags_str.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
+    "#         | df_all_roads_created.tags_str.contains(\"nsroadimport\"))\\\n",
+    "#         & (df_all_roads_created.tags_str.contains(\"highway\")))\\\n",
     "#         |\\\n",
-    "#         (df_roads_created.hashtags_un.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_created.hashtags_un.contains(\"nsroadimport\")\\\n",
-    "#         & (df_roads_created.tags_str.contains(\"highway\")))\\\n",
+    "#         (df_all_roads_created.hashtags_un.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_created.hashtags_un.contains(\"nsroadimport\")\\\n",
+    "#         & (df_all_roads_created.tags_str.contains(\"highway\")))\\\n",
     "#     )\n"
    ]
   },
@@ -2354,7 +2365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f3_1_created = df_roads_created.filter(df_roads_created.editor.contains(\"RapiD\"))\n"
+    "# df_roads_f3_1_created = df_all_roads_created.filter(df_all_roads_created.editor.contains(\"RapiD\"))\n"
    ]
   },
   {
@@ -2380,14 +2391,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_ai_roads_f3_2_created = df_roads_created.filter(\n",
-    "    df_roads_created.editor.contains(\"RapiD\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"mapwithai\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
-    "    | df_roads_created.tags_str.contains(\"nsroadimport\")\\\n",
-    "    | df_roads_created.hashtags_un.contains(\"#mapwithai\")\\\n",
-    "    | df_roads_created.hashtags_un.contains(\"#nsroadimport\")\\\n",
-    "    | df_roads_created.hashtags_un.contains(\"#MapWithAI\")\\\n",
+    "df_all_ai_roads_f3_2_created = df_all_roads_created.filter(\n",
+    "    df_all_roads_created.editor.contains(\"RapiD\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"mapwithai\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
+    "    | df_all_roads_created.tags_str.contains(\"nsroadimport\")\\\n",
+    "    | df_all_roads_created.hashtags_un.contains(\"#mapwithai\")\\\n",
+    "    | df_all_roads_created.hashtags_un.contains(\"#nsroadimport\")\\\n",
+    "    | df_all_roads_created.hashtags_un.contains(\"#MapWithAI\")\\\n",
     ")\n"
    ]
   },
@@ -2863,12 +2874,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f3_3_created = df_roads_created.filter(\\\n",
-    "#     (df_roads_created.editor.contains(\"RapiD\")\\\n",
-    "#      & (df_roads_created.tags_str.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_created.hashtags_un.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
-    "#         | df_roads_created.hashtags_un.contains(\"MapWithAI\")))\\\n",
+    "# df_roads_f3_3_created = df_all_roads_created.filter(\\\n",
+    "#     (df_all_roads_created.editor.contains(\"RapiD\")\\\n",
+    "#      & (df_all_roads_created.tags_str.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_created.hashtags_un.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_created.tags_str.contains(\"MapWithAI\")\\\n",
+    "#         | df_all_roads_created.hashtags_un.contains(\"MapWithAI\")))\\\n",
     "#     )\n"
    ]
   },
@@ -2952,6 +2963,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_roads_edited = df_roads_edited.filter(\n",
+    "    df_roads_edited.tags_str.contains(\"highway\"))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2972,19 +2993,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_main_roads_edited = df_roads_edited.filter(\n",
-    "    df_roads_edited.tags_str.contains(\"motorway\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"trunk\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"motorway_link\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"trunk_link\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"primary\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"primary_link\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"secondary\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"secondary_link\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"tertiary\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"tertiary_link\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"unclassified\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"residential\")\\\n",
+    "df_main_roads_edited = df_all_roads_edited.filter(\n",
+    "    df_all_roads_edited.tags_str.contains(\"motorway\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"trunk\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"motorway_link\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"trunk_link\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"primary\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"primary_link\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"secondary\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"secondary_link\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"tertiary\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"tertiary_link\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"unclassified\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"residential\")\\\n",
     "    )\n"
    ]
   },
@@ -3062,7 +3083,7 @@
    ],
    "source": [
     "# World – all roads\n",
-    "df_all_roads_edited_world = df_roads_edited.groupBy(\"year\").sum().toPandas()\n",
+    "df_all_roads_edited_world = df_all_roads_edited.groupBy(\"year\").sum().toPandas()\n",
     "df_all_roads_edited_world\n"
    ]
   },
@@ -3206,7 +3227,7 @@
    ],
    "source": [
     "# Selected countries – all roads\n",
-    "df_all_roads_edited_country = df_roads_edited.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
+    "df_all_roads_edited_country = df_all_roads_edited.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
     "df_all_roads_edited_country = df_all_roads_edited_country.groupBy(\"year\", \"country\").sum().toPandas()\n",
     "df_all_roads_edited_country"
    ]
@@ -3520,10 +3541,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f1_edited = df_roads_edited.filter(\\\n",
-    "#     df_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
-    "#     | df_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
-    "#     | df_roads_edited.tags_str.contains(\"nsroadimport\")\\\n",
+    "# df_roads_f1_edited = df_all_roads_edited.filter(\\\n",
+    "#     df_all_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
+    "#     | df_all_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
+    "#     | df_all_roads_edited.tags_str.contains(\"nsroadimport\")\\\n",
     "#     )\n"
    ]
   },
@@ -3552,16 +3573,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f2_edited = df_roads_edited.filter(\\\n",
+    "# df_roads_f2_edited = df_all_roads_edited.filter(\\\n",
     "#     (\\\n",
-    "#         (df_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
-    "#          | df_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
-    "#          | df_roads_edited.tags_str.contains(\"nsroadimport\"))\\\n",
-    "#         & (df_roads_edited.tags_str.contains(\"highway\")))\\\n",
+    "#         (df_all_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
+    "#          | df_all_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
+    "#          | df_all_roads_edited.tags_str.contains(\"nsroadimport\"))\\\n",
+    "#         & (df_all_roads_edited.tags_str.contains(\"highway\")))\\\n",
     "#       |\\\n",
-    "#     (df_roads_edited.hashtags_un.contains(\"mapwithai\")\\\n",
-    "#          | df_roads_edited.hashtags_un.contains(\"nsroadimport\")\\\n",
-    "#          & (df_roads_edited.tags_str.contains(\"highway\"))))\n"
+    "#     (df_all_roads_edited.hashtags_un.contains(\"mapwithai\")\\\n",
+    "#          | df_all_roads_edited.hashtags_un.contains(\"nsroadimport\")\\\n",
+    "#          & (df_all_roads_edited.tags_str.contains(\"highway\"))))\n"
    ]
   },
   {
@@ -3598,7 +3619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f3_1_edited = df_roads_edited.filter(df_roads_edited.editor.contains(\"RapiD\"))\n"
+    "# df_roads_f3_1_edited = df_all_roads_edited.filter(df_all_roads_edited.editor.contains(\"RapiD\"))\n"
    ]
   },
   {
@@ -3623,14 +3644,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_ai_roads_f3_2_edited = df_roads_edited.filter(\n",
-    "    df_roads_edited.editor.contains(\"RapiD\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
-    "    | df_roads_edited.tags_str.contains(\"nsroadimport\")\\\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#mapwithai\")\\\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#nsroadimport\")\\\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#MapWithAI\")\\\n",
+    "df_all_ai_roads_f3_2_edited = df_all_roads_edited.filter(\n",
+    "    df_all_roads_edited.editor.contains(\"RapiD\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
+    "    | df_all_roads_edited.tags_str.contains(\"nsroadimport\")\\\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#mapwithai\")\\\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#nsroadimport\")\\\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#MapWithAI\")\\\n",
     ")\n"
    ]
   },
@@ -3641,13 +3662,13 @@
    "outputs": [],
    "source": [
     "df_main_ai_roads_f3_2_edited = df_main_roads_edited.filter(\n",
-    "    df_roads_edited.editor.contains(\"RapiD\")\n",
-    "    | df_roads_edited.tags_str.contains(\"mapwithai\")\n",
-    "    | df_roads_edited.tags_str.contains(\"MapWithAI\")\n",
-    "    | df_roads_edited.tags_str.contains(\"nsroadimport\")\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#mapwithai\")\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#nsroadimport\")\n",
-    "    | df_roads_edited.hashtags_un.contains(\"#MapWithAI\")\n",
+    "    df_all_roads_edited.editor.contains(\"RapiD\")\n",
+    "    | df_all_roads_edited.tags_str.contains(\"mapwithai\")\n",
+    "    | df_all_roads_edited.tags_str.contains(\"MapWithAI\")\n",
+    "    | df_all_roads_edited.tags_str.contains(\"nsroadimport\")\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#mapwithai\")\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#nsroadimport\")\n",
+    "    | df_all_roads_edited.hashtags_un.contains(\"#MapWithAI\")\n",
     ")\n"
    ]
   },
@@ -3857,9 +3878,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # World\n",
-    "# df_main_ai_roads_edited_world = df_main_ai_roads_f3_2_edited.groupBy(\"year\").sum().toPandas()\n",
-    "# df_main_ai_roads_edited_world\n"
+    "# World\n",
+    "df_main_ai_roads_edited_world = df_main_ai_roads_f3_2_edited.groupBy(\"year\").sum().toPandas()\n",
+    "df_main_ai_roads_edited_world\n"
    ]
   },
   {
@@ -3868,10 +3889,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Selected countries\n",
-    "# df_main_ai_roads_edited_country = df_main_ai_roads_f3_2_edited.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
-    "# df_main_ai_roads_edited_country = df_main_ai_roads_edited_country.groupBy(\"year\", \"country\").count().withColumnRenamed(\"count\", \"df_main_ai_roads_created_country\").toPandas()\n",
-    "# df_main_ai_roads_edited_country"
+    "# Selected countries\n",
+    "df_main_ai_roads_edited_country = df_main_ai_roads_f3_2_edited.filter(\"country == 'USA' OR country == 'NGA' OR country == 'VNM' OR country == 'DEU' OR country == 'CZE'\")\n",
+    "df_main_ai_roads_edited_country = df_main_ai_roads_edited_country.groupBy(\"year\", \"country\").count().withColumnRenamed(\"count\", \"df_main_ai_roads_created_country\").toPandas()\n",
+    "df_main_ai_roads_edited_country"
    ]
   },
   {
@@ -3952,12 +3973,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_roads_f3_3_edited = df_roads_edited.filter(\\\n",
-    "#     (df_roads_edited.editor.contains(\"RapiD\")\\\n",
-    "#      & (df_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_edited.hashtags_un.contains(\"mapwithai\")\\\n",
-    "#         | df_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
-    "#         | df_roads_edited.hashtags_un.contains(\"MapWithAI\")))\\\n",
+    "# df_roads_f3_3_edited = df_all_roads_edited.filter(\\\n",
+    "#     (df_all_roads_edited.editor.contains(\"RapiD\")\\\n",
+    "#      & (df_all_roads_edited.tags_str.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_edited.hashtags_un.contains(\"mapwithai\")\\\n",
+    "#         | df_all_roads_edited.tags_str.contains(\"MapWithAI\")\\\n",
+    "#         | df_all_roads_edited.hashtags_un.contains(\"MapWithAI\")))\\\n",
     "#     )\n"
    ]
   },
