--- a/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb
+++ b/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# initializing variables\n",
-    "desired_countries = [\"USA\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]"
+    "desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "\n",
     "while True:\n",
     "    try:\n",
-    "        user_sel_countries = input(\"Do you want to download data for specific countries?\\\n",
+    "        user_sel_countries = input(\"Do you want to download data for desired countries defined in a list in the code?\\\n",
     "                                        Enter y for yes or n for no\"\n",
     "                                   )\n",
     "    except ValueError as e:\n",
@@ -418,22 +418,28 @@
     "    return feature\n",
     "\n",
     "\n",
-    "def sel_countries_from_geojson(bpolys):\n",
+    "def sel_countries_from_geojson(bpolys, desired_countries):\n",
     "    \"\"\"Get the celected countries from the geojson file.\"\"\"\n",
     "\n",
     "    sel_countries = {\"features\": []}\n",
     "\n",
-    "    desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]\n",
+    "    # desired_countries = [\"US1\", \"NGA\", \"DEU\", \"CZE\", \"VNM\"]\n",
     "\n",
-    "    for i in range(len(bpolys[\"features\"])):\n",
-    "        if bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"] in desired_countries:\n",
-    "            sel_country = bpolys[\"features\"][i]\n",
-    "            sel_countries[\"features\"].append(sel_country)\n",
-    "            print(i, bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
-    "            desired_countries.remove(\n",
-    "                bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
+    "    while True:\n",
+    "        try:\n",
+    "            for i in range(len(bpolys[\"features\"])):\n",
+    "                if bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"] in desired_countries:\n",
+    "                    sel_country = bpolys[\"features\"][i]\n",
+    "                    sel_countries[\"features\"].append(sel_country)\n",
+    "                    print(i, bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
+    "                    desired_countries.remove(\n",
+    "                        bpolys[\"features\"][i][\"properties\"][\"ADM0_A3\"])\n",
+    "        except KeyError:\n",
+    "            print(\"You are trying to access a key that does not exist. Please try to use a geojson format in different structure.\")\n",
+    "            break\n",
+    "        break\n",
     "\n",
-    "    print(f\"Countries not included: {desired_countries}\")\n",
+    "    print(f\"Countries not in downloaded data: {desired_countries}\")\n",
     "\n",
     "    return sel_countries\n",
     "\n",
@@ -545,26 +551,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46 CZE\n",
-      "47 DEU\n",
-      "53 VNM\n",
-      "95 NGA\n",
-      "148 US1\n",
-      "Countries not included: []\n"
+      "You are trying to access a key that does not exist. Please try to use a geojson format in different structure.\n",
+      "Countries not in downloaded data: ['US1', 'NGA', 'DEU', 'CZE', 'VNM']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading finished\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [02:30<00:00, 30.11s/it]\n"
+      "\n"
      ]
     }
    ],
@@ -572,35 +581,60 @@
     "json_data = []\n",
     "geojson_data = []\n",
     "\n",
-    "if user_d_format == 0:\n",
-    "    if user_sel_countries == \"y\":\n",
-    "        sel_countries = sel_countries_from_geojson(bpolys)\n",
+    "fin_file_name = input(\"Enter the name of the file to export the data: \")\n",
+    "\n",
+    "if user_d_format == 0:  # 0 for json format\n",
+    "    if user_sel_countries == \"y\":  # y just for selected countries\n",
+    "        sel_countries = sel_countries_from_geojson(bpolys, desired_countries)\n",
     "        obtained_json_data = return_json_data(sel_countries)\n",
     "        json_data.extend(obtained_json_data)\n",
-    "        export_data_as_json(geojson_dic[user_d_spec], obtained_json_data)\n",
+    "        export_data_as_json(fin_file_name, obtained_json_data)\n",
     "    else:\n",
     "        obtained_json_data = return_json_data()\n",
     "        json_data.extend(obtained_json_data)\n",
-    "        export_data_as_json(geojson_dic[user_d_spec], obtained_json_data)\n",
+    "        export_data_as_json(fin_file_name, obtained_json_data)\n",
     "else:\n",
-    "    obtained_geojson_data = return_geojson_data()\n",
-    "    geojson_data.extend(obtained_geojson_data)\n",
-    "    export_data_as_geojson(geojson_dic[user_d_spec], obtained_geojson_data)\n"
+    "    if user_sel_countries == \"y\":  # y just for selected countries\n",
+    "        sel_countries = sel_countries_from_geojson(bpolys, desired_countries)\n",
+    "        obtained_geojson_data = return_geojson_data(sel_countries)\n",
+    "        geojson_data.extend(obtained_geojson_data)\n",
+    "        export_data_as_geojson(fin_file_name, obtained_geojson_data)\n",
+    "    else:\n",
+    "        obtained_geojson_data = return_geojson_data()\n",
+    "        geojson_data.extend(obtained_geojson_data)\n",
+    "        export_data_as_geojson(fin_file_name, obtained_geojson_data)\n",
+    "print(\"Finished!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'downloaded-data-json\\\\roads_geojson-asia-states.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\milan\\OneDrive - MUNI\\VŠ\\PhD\\Zahraniční stáž\\Work\\HeiGIT_notebooks\\analysis\\ai-assisted-osm-mapping-stats\\notebooks-roads\\roads-download-export-data-ver2-sel-countries.ipynb Cell 19\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mif\u001b[39;00m user_d_format \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# 0 for json format\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mdownloaded-data-json\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mroads_\u001b[39m\u001b[39m{\u001b[39;00mgeojson_dic[user_d_spec]\u001b[39m}\u001b[39;00m\u001b[39m.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         dow_res \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(file)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'downloaded-data-json\\\\roads_geojson-asia-states.json'"
+     ]
+    }
+   ],
    "source": [
-    "with open(f\"downloaded-data-json\\\\roads_{geojson_dic[user_d_spec]}.json\", \"r\") as file:\n",
-    "    dow_res = json.load(file)\n"
+    "if user_d_format == 0:  # 0 for json format\n",
+    "    with open(f\"downloaded-data-json\\\\roads_{geojson_dic[user_d_spec]}.json\", \"r\") as file:\n",
+    "        dow_res = json.load(file)\n",
+    "else:\n",
+    "    print(\"Stopping the script.\")\n",
+    "    raise SystemExit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1183,7 @@
        "59  United States of America  source=maxar  2023-01-01T00:00:00Z  5.803140e+07"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1216,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
