--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -7169,6 +7169,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables = list(globals().keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_all_roads_created_country\n",
+      "df_main_roads_created_country\n",
+      "df_all_ai_roads_created_country\n",
+      "df_main_ai_roads_created_country\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in variables:\n",
+    "    if v.startswith(\"df_\") and v.endswith(\"_created_country\"):\n",
+    "        print(v)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
